--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ name = "demo-performance"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-numpy = "^1.24.3"
+numpy = "^1"
 python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
-filprofiler = "^2023.3.1"
-pyinstrument = "^4"
+filprofiler = "*"
+pyinstrument = "*"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
